other-cel/restrict-binding-clusteradmin/.chainsaw-test/rb-good.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: goodrb01
subjects:
- kind: User
  name: foo
  apiGroup: rbac.authorization.k8s.io
roleRef:
  kind: Role
  name: foo-bar
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: goodrb02
subjects:
- kind: ServiceAccount
  name: foo
  namespace: foo
roleRef:
  kind: Role
  name: foo-bar
  apiGroup: rbac.authorization.k8s.io
